# APEX_New

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  api.md  architecture.md  configuration.md  deployment.md  development.md  metrics.md  models.md
scripts/: run_vllm.sh
src/apex/: __init__.py  cli.py
src/apex/api/: __init__.py  app.py  routes.py  runner.py
src/apex/backends/: __init__.py  base.py  fake.py  openai_chat.py  registry.py
src/apex/backends/api/: __init__.py  editor_replicate.py
src/apex/backends/local/: __init__.py  editor_flux.py  editor_qwen.py
src/apex/config/: __init__.py  settings.py  thresholds.py
src/apex/editor/: __init__.py  identity_restore.py  image_editor.py
src/apex/goalspec/: __init__.py  detail_dicts.py  enums.py  models.py  options.py  presets.py  seed_prompt.py  validation.py
src/apex/loop/: __init__.py  engine.py  policy.py  records.py
src/apex/metrics/: __init__.py  _util.py  aesthetic.py  base.py  face.py  identity.py  iqa.py  registry.py  report.py  sharpness.py
src/apex/mllm/: __init__.py  judge.py  orchestrator.py  schemas.py
src/apex/persistence/: __init__.py  artifacts.py  profiles.py  runs.py
src/apex/service/: __init__.py  dto.py  harness.py
tests/: conftest.py
tests/fixtures/: legacy_profile_v2.json
tests/integration/: test_mllm_live.py
tests/unit/: test_api.py  test_backends_fake.py  test_goalspec.py  test_loop.py  test_metrics.py  test_policy.py  test_profiles.py  test_validation.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  schema.gen.ts  types.ts
web/src/components/: GoalForm.tsx  ImageDropzone.tsx  IterationCard.tsx  RunView.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Select.tsx  Spinner.tsx  Textarea.tsx
web/src/hooks/: useRunStream.ts
